更改目录结构

--- a/examples/about_antv_performance_test.html
+++ b/examples/about_antv_performance_test.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Example001</title>
+  <title>AboutAntVPerformanceTest</title>
   <style type="text/css">
     html, body {
       margin: 0;
@@ -17,7 +17,7 @@
 
 <canvas style="width: 928px;height: 530px;"></canvas>
 
-<script src="janvas.min.js"></script>
+<script src="../dist/janvas.min.js"></script>
 <script>
   var antV = function (canvas) {
     var width = canvas.offsetWidth, height = canvas.offsetHeight,
