调整 README 点击打开示例的位置，修改太极图点击拖曳才能移动位置。

--- a/examples/taiji.html
+++ b/examples/taiji.html
@@ -84,7 +84,7 @@
     }).start();
 
     addEventListener("mousemove", function (ev) {
-      taiji.init(ev.offsetX, ev.offsetY);
+      if (ev.buttons) taiji.init(ev.offsetX, ev.offsetY);
     });
 
     return {};
