--- a/examples/hello_world.html
+++ b/examples/hello_world.html
@@ -24,18 +24,9 @@
     el: "#app",
     methods: {
       init: function () {
-        this.text = new janvas.Text(this.ctx, 0, 0, "Hello World");
-        this.text.getStyle().setFont("128px sans-serif")
-          .setTextAlign("center").setTextBaseline("middle");
-      },
-      draw: function () {
-        this.ctx.clearRect(0, 0, this.width, this.height);
-        this.text.fill();
-      },
-      resize: function () {
-        janvas.Canvas.prototype.resize.call(this);
-        this.text.initXY(this.width / 2, this.height / 2);
-        this.draw();
+        var text = new janvas.Text(this.ctx, this.width / 2, this.height / 2, "Hello World");
+        text.getStyle().setFont("128px sans-serif").setTextAlign("center").setTextBaseline("middle");
+        text.fill();
       }
     }
   });
