--- a/examples/about_antv_performance_test.html
+++ b/examples/about_antv_performance_test.html
@@ -293,7 +293,7 @@
     .then(function (res) {
       return res.json();
     }).then(function (res) {
-    next.data(res);
+    antv.data(res);
   });
 </script>
 
