修改 el 属性为 container，命名更直观。

--- a/examples/about_antv_performance_test.html
+++ b/examples/about_antv_performance_test.html
@@ -20,7 +20,7 @@
 <script src="../dist/janvas.min.js"></script>
 <script>
   var antv = new janvas.Canvas({
-    el: "#app",
+    container: "#app",
     components: {
       factory: function () {
         function Node(ctx, id, x, y, label) {
