--- a/examples/hello_world.html
+++ b/examples/hello_world.html
@@ -21,7 +21,7 @@
 <script>
   // Your code here.
   var helloWorld = new janvas.Canvas({
-    el: "#app",
+    container: "#app",
     methods: {
       init: function () {
         var text = new janvas.Text(this.ctx, this.width / 2, this.height / 2, "Hello World");
