--- a/examples/taichi.html
+++ b/examples/taichi.html
@@ -20,7 +20,7 @@
 <script src="../dist/janvas.min.js"></script>
 <script>
   var taichi = new janvas.Canvas({
-    el: "#app",
+    container: "#app",
     props: {
       interval: 16.67,
       times: -1,
