--- a/examples/tiger.html
+++ b/examples/tiger.html
@@ -264,7 +264,7 @@
     </svg>';
 
   var tiger = new janvas.Canvas({
-    el: "#app",
+    container: "#app",
     methods: {
       init: function () {
         this.shapes = [];
