--- a/examples/clock.html
+++ b/examples/clock.html
@@ -30,8 +30,9 @@
         });
         this.background = new janvas.Rect(this.ctx); // 背景
         this.bottom = new janvas.RoundRect(this.ctx); // 时钟底
+        this.bottom.border = new janvas.RoundRect(this.ctx);
         this.outer = new janvas.Arc(this.ctx); // 主圆
-        this.inner = new janvas.Arc(this.ctx); // 内圆
+        this.outer.border = new janvas.Arc(this.ctx); // 主圆阴影
         this.second = new janvas.RoundRect(this.ctx);
         this.minute = new janvas.RoundRect(this.ctx);
         this.hour = new janvas.RoundRect(this.ctx);
@@ -40,16 +41,22 @@
         this.visibility(true);
       },
       initStyles: function () {
-        this.shadow = new janvas.ShadowStyle().setShadowBlur(5).setShadowColor("hsla(0, 0%, 0%, 0.8)");
+        this.shadow = new janvas.ShadowStyle().setShadowBlur(5)
+          .setShadowColor("hsla(0, 0%, 0%, 0.8)");
         this.shadow.basis = new janvas.Point(20, 0); // this.width / 96
         this.shadow.cursor = new janvas.Point();
-        this.background.getStyle().setFillStyle("hsl(223, 6%, 46%)"); // 背景
-        this.gradient("hsl(0, 0%, 100%)", "hsl(0, 0%, 80%)",
+        this.background.getStyle().setFillStyle("hsl(0, 0%, 63%)"); // 背景
+        this.gradient("hsl(0, 0%, 100%)", "hsl(0, 0%, 90%)",
           this.bottom, this.minute, this.hour, this.dot);
-        this.dot.getStyle().setStrokeStyle("hsl(0, 0%, 50%)");
+        this.bottom.border.getStyle().setLineWidth(20);
+        this.bottom.shadow = new janvas.ShadowStyle().setShadowBlur(15)
+          .setShadowColor("hsla(0, 0%, 0%, 0.5)").setShadowOffsetX(-this.width);
+        this.dot.getStyle().setStrokeStyle("hsl(0, 0%, 63%)");
         this.gradient("hsl(0, 80%, 70%)", "hsl(0, 80%, 50%)", this.second);
-        this.gradient("hsl(0, 0%, 0%)", "hsl(0, 0%, 50%)", this.outer);
-        this.gradient("hsl(0, 0%, 30%)", "hsl(0, 0%, 20%)", this.inner);
+        this.gradient("hsl(0, 0%, 40%)", "hsl(0, 0%, 23%)", this.outer);
+        this.outer.border.getStyle().setLineWidth(20);
+        this.outer.shadow = new janvas.ShadowStyle().setShadowBlur(10)
+          .setShadowColor("hsla(0, 0%, 0%, 0.5)").setShadowOffsetX(-this.width);
       },
       update: function (ts) {
         ts += this.milliseconds;
@@ -65,19 +72,22 @@
           this._allSeconds++; // 维护一个总秒数，避免重复操作 hours/minutes/seconds
           this.setAngle();
           this.onEvent(this.hours, this.minutes, this.seconds);
-        } else if (ts % 1000 > 700) { // 动画间隔为 400，动画效果为五阶贝塞尔曲线
+        } else if (ts % 1000 > 600) { // 动画间隔为 400，动画效果为五阶贝塞尔曲线
           this.second.getMatrix().setAngle(this._secondLastAngle
             + Math.PI / 30 // secondIncrementAngle: 1/60*2PI
-            * this.animation[Math.floor((ts % 1000 - 700) / 300 * this.animation.length)]);
+            * this.animation[Math.floor((ts % 1000 - 600) / 400 * this.animation.length)]);
         }
       },
       draw: function () {
         this.background.fill();
         this.stg.setShadowStyles(this.shadow);
         this.bottom.fill();
-        this.outer.fill();
+        this.stg.setShadowStyles(this.bottom.shadow);
+        this.bottom.clip().border.stroke().restore();
         this.stg.resetShadowStyles();
-        this.inner.fill();
+        this.outer.fill();
+        this.stg.setShadowStyles(this.outer.shadow);
+        this.outer.border.stroke();
         this.stg.setShadowStyles(this.shadow);
         this.hour.fill();
         this.minute.fill();
@@ -96,19 +106,21 @@
         this.background.initXY(0, 0).setWidth(this.width).setHeight(this.height);
         this.bottom.init(cx - this._sizeBy2, cy - this._sizeBy2, cx, cy)
           .setWidth(size).setHeight(size).setRadius(size / 4);
+        this.bottom.border.initXY(this.bottom.getStartX() + this.width, this.bottom.getStartY())
+          .setWidth(size).setHeight(size).setRadius(size / 4);
         this.outer.initXY(cx, cy).setRadius(size * goldenRatio / 2);
-        this.inner.initXY(cx, cy).setRadius(this.outer.getRadius() * goldenRatio);
-        var offset = this.inner.getRadius() * Math.pow(goldenRatio, 18);
-        this.second.init(cx - offset, cy - offset, cx, cy)
-          .setWidth(this.inner.getRadius() * goldenRatio + offset)
+        this.outer.border.initXY(cx + this.width, cy).setRadius(this.outer.getRadius());
+        var offset = this.outer.getRadius() * Math.pow(goldenRatio, 18);
+        this.second.init(cx - offset * 8, cy - offset, cx, cy)
+          .setWidth(this.outer.getRadius() * goldenRatio + offset * 8)
           .setHeight(offset * 2).setRadius(offset);
         offset /= Math.pow(goldenRatio, 2);
         this.minute.init(cx - offset, cy - offset, cx, cy)
-          .setWidth(this.inner.getRadius() * Math.pow(goldenRatio, 2) + offset)
+          .setWidth(this.outer.getRadius() * Math.pow(goldenRatio, 2) + offset)
           .setHeight(offset * 2).setRadius(offset);
         offset /= Math.pow(goldenRatio, 2);
         this.hour.init(cx - offset, cy - offset, cx, cy)
-          .setWidth(this.inner.getRadius() * Math.pow(goldenRatio, 4) + offset)
+          .setWidth(this.outer.getRadius() * Math.pow(goldenRatio, 4) + offset)
           .setHeight(offset * 2).setRadius(offset);
         this.dot.initXY(cx, cy).setRadius(offset / Math.pow(goldenRatio, 2));
         this.initStyles();
@@ -146,13 +158,15 @@
         this.minute.getMatrix().setAngle(this._allSeconds / 60 / 60 * Math.PI * 2 - Math.PI / 2);
         this.second.getMatrix().setAngle(this._allSeconds / 60 * Math.PI * 2 - Math.PI / 2);
         this._secondLastAngle = this.second.getMatrix().getAngle();
-        if (this.hours === 5) {
-          if (this.minutes >= 45) this.shadow.cursor.copy(this.shadow.basis).scaleX(this._allSeconds % 900 / 900);
-        } else if (this.hours >= 6 && this.hours < 18) { // 设置 shadow 随时间变化的“角度”
-          this.shadow.cursor.copy(this.shadow.basis).rotate((this._allSeconds - 6 * 3600) / (12 * 3600) * Math.PI);
-        } else if (this.hours === 18) {
-          if (this.minutes < 15) this.shadow.cursor.copy(this.shadow.basis).inverseX().scaleX(1 - this._allSeconds % 900 / 900);
-        }
+        // if (this.hours === 5) {
+        //   if (this.minutes >= 45) this.shadow.cursor.copy(this.shadow.basis).scaleX(this._allSeconds % 900 / 900);
+        // } else
+        //   if (this.hours >= 6 && this.hours < 18) { // 设置 shadow 随时间变化的“角度”
+        this.shadow.cursor.copy(this.shadow.basis).rotate((this._allSeconds - 6 * 3600) % 43200 / (12 * 3600) * Math.PI);
+        // }
+        // else if (this.hours === 18) {
+        // if (this.minutes < 15) this.shadow.cursor.copy(this.shadow.basis).inverseX().scaleX(1 - this._allSeconds % 900 / 900);
+        // }
         this.shadow.setShadowOffsetX(this.shadow.cursor.getX()).setShadowOffsetY(this.shadow.cursor.getY());
       }
     }
