--- a/examples/flydots.html
+++ b/examples/flydots.html
@@ -29,10 +29,10 @@
     },
     components: {
       factory: (function () {
-        function Dot($) {
+        function Dot(ctx, width, height) {
           this._left = this._top = -50;
-          this._right = $.width + 50;
-          this._bottom = $.height + 50;
+          this._right = width + 50;
+          this._bottom = height + 50;
           this._x = janvas.Utils.randInt(this._left, this._right, true);
           this._y = janvas.Utils.randInt(this._top, this._bottom, true);
           this._r = 3;
@@ -40,7 +40,7 @@
           this._vy = janvas.Utils.randSign() * janvas.Utils.randInt(10, 100, true) / 100;
           this._relateStart = [];
           this._relateEnd = [];
-          this.arc = new janvas.Arc($.ctx, this._x, this._y, this._r);
+          this.arc = new janvas.Arc(ctx, this._x, this._y, this._r);
           this.arc.getStyle().setFillStyle("hsl(0, 0%, 40%)");
         }
 
@@ -109,11 +109,11 @@
         };
 
         return {
-          newDot: function () {
-            return new Dot(this.$);
+          newDot: function (width, height) {
+            return new Dot(this.$ctx, width, height);
           },
           newLine: function (source, target) {
-            return new Line(this.$.ctx, source, target);
+            return new Line(this.$ctx, source, target);
           }
         };
       }())
@@ -121,7 +121,7 @@
     methods: {
       init: function () {
         for (var i = 0; i < 100; i++) {
-          var dot = this.factory.newDot();
+          var dot = this.factory.newDot(this.width, this.height);
           this.dots.forEach(function (target) {
             this.lines.push(this.factory.newLine(dot, target));
           }, this);
@@ -161,8 +161,8 @@
       eventmove: function () {
         this.cursor.initXY(this.x, this.y);
       },
-      eventup: function () {
-        this.dots.forEach(function (dot) {
+      eventup: function (ev) {
+        if (ev.type !== "mouseout") this.dots.forEach(function (dot) {
           dot.restore();
         });
       }
