--- a/examples/tiger.html
+++ b/examples/tiger.html
@@ -299,15 +299,40 @@
       }
     },
     events: {
-      eventmove: function () {
+      eventdown: function () {
+        this._eventdown = true;
         this.shapes.forEach(function (shape) {
-          shape.getStyle().setLineWidth(
-            shape.isPointInPath(this.x, this.y) ||
-            shape.isPointInStroke(this.x, this.y) ?
-              10 : shape.getStyle().lineWidthCache
-          );
-        }, this);
+          shape.lastX = shape.getStartX();
+          shape.lastY = shape.getStartY();
+        });
+      },
+      eventmove: function () {
+        if (this._eventdown) {
+          this.shapes.forEach(function (shape) {
+            var mx = shape.lastX + this.moveX, my = shape.lastY + this.moveY;
+            shape.init(mx, my, mx, my);
+          }, this);
+        } else {
+          this.shapes.forEach(function (shape) {
+            shape.getStyle().setLineWidth(
+              shape.isPointInPath(this.x, this.y) ||
+              shape.isPointInStroke(this.x, this.y) ?
+                10 : shape.getStyle().lineWidthCache
+            );
+          }, this);
+        }
         this.draw();
+      },
+      eventup: function () {
+        this._eventdown = false;
+      },
+      wheel: function () {
+        this.shapes.forEach(function (shape) {
+          var targetSx = this.x + (shape.getCenterX() - this.x) * this.scaling,
+            targetSy = this.y + (shape.getCenterY() - this.y) * this.scaling;
+          shape.init(targetSx, targetSy, targetSx, targetSy)
+            .getMatrix().setScale(this.scale, this.scale);
+        }, this);
       }
     },
     functions: {
